--- a/public/css/index.css
+++ b/public/css/index.css
@@ -49,50 +49,15 @@
   transform: scale(0.95);
 }
 
-.item_advantage {
-  padding: 20px;
+.item_link {
+  display: block;
+  padding: 30px;
   border: 1px solid #3e3e3e;
 }
 
-.item_advantage__title {
-  line-height: 1.3;
-  font-weight: 800;
-  margin-top: 20px;
-}
-
-.item_advantage__title--inverse {
-  color: #d5d5d5;
-}
-
-.item_advantage__positive {
-  fill: #242424;
-  stroke: #c1ea1d;
-  stroke-width: 5;
-  -webkit-transition: .4s;
-  -o-transition: .4s;
-  transition: .4s;
-}
-
-.item_advantage__negative {
-  fill: #292929;
-  stroke: #c62024;
-  stroke-width: 3;
-  -webkit-transition: .4s;
-  -o-transition: .4s;
-  transition: .4s;
-}
-
-.item_advantage--inverse {
-  border-color: #292929;
-  background-color: #292929;
-}
-
-.item_advantage:hover .item_advantage__positive, .item_advantage:focus .item_advantage__positive {
-  fill: #c1ea1d;
-}
-
-.item_advantage:hover .item_advantage__negative, .item_advantage:focus .item_advantage__negative {
-  fill: #c62024;
+.item_link:hover, .item_link:focus {
+  background-color: #1a1a1a;
+  text-decoration: none;
 }
 
 .item_price {
@@ -117,9 +82,9 @@
 
 .item_price__content {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 calc(100% - 350px);
-  flex: 0 0 calc(100% - 350px);
-  max-width: calc(100% - 350px);
+  -ms-flex: 0 0 calc(100% - 300px);
+  flex: 0 0 calc(100% - 300px);
+  max-width: calc(100% - 300px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,9 +99,9 @@
 
 .item_price__info {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 250px;
-  flex: 0 0 250px;
-  max-width: 250px;
+  -ms-flex: 0 0 200px;
+  flex: 0 0 200px;
+  max-width: 200px;
 }
 
 .item_price__title {
@@ -163,6 +128,8 @@
 
 .item_price__add-intro {
   font-size: 13px;
+  line-height: 18px;
+  margin-top: 4px;
   opacity: .5;
 }
 
@@ -239,11 +206,6 @@
   }
 }
 
-.item_info {
-  padding: 30px;
-  background-color: #1a1a1a;
-}
-
 .content-main {
   position: relative;
   padding: 40px;
@@ -264,6 +226,7 @@
   position: absolute;
   top: 40px;
   left: 40px;
+  font-size: 12px;
   text-align: right;
   padding: 4px 6px;
   border: 4px solid #c1ea1d;
@@ -329,97 +292,25 @@
   }
 }
 
-.content-compare {
-  padding: 80px 0;
-}
-
-.content-compare__image {
-  width: 100%;
-  height: 560px;
-  background: no-repeat top center / cover;
-}
-
-@media all and (max-width: 1360px) {
-  .content-compare {
-    padding: 60px 0;
-  }
-}
-
-@media all and (max-width: 992px) {
-  .content-compare__image {
-    height: 290px;
-  }
-}
-
-@media all and (max-width: 576px) {
-  .content-compare {
-    padding: 40px 0;
-  }
-  .content-compare__image {
-    height: 240px;
-  }
-}
-
-.content-intro {
-  max-width: calc(100% - 40px);
-}
-
-.content-form {
-  padding: 60px 0;
-}
-
-.content-form__intro {
-  max-width: calc(100% - 40px);
-  color: #d5d5d5;
-}
-
-.content-form__form {
-  margin-top: 40px;
-}
-
-.content-form__animation {
-  max-width: 90%;
-  margin: 0 auto;
-}
-
-.content-form__animation #path, .content-form__animation #elem {
-  -webkit-transition: .4s;
-  -o-transition: .4s;
-  transition: .4s;
-}
-
-.content-form__animation:hover #path, .content-form__animation:focus #path {
-  stroke: #d5d5d5;
-}
-
-.content-form__animation:hover #elem, .content-form__animation:focus #elem {
-  fill: #ffffff;
-}
-
-@media all and (max-width: 576px) {
-  .content-form {
-    padding-top: 40px;
-  }
-}
-
 .portfolio {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.portfolio__subtitle {
-  color: #d5d5d5;
-  text-decoration: none;
-  font-size: 12px;
-  padding: 10px 20px;
+.portfolio__title {
+  padding: 10px 20px 0;
   margin: 0;
 }
 
-.portfolio__title {
-  font-weight: 800;
-  padding: 10px 20px 20px;
-  margin: 0;
+.portfolio__title:last-child {
+  padding-bottom: 20px;
+}
+
+.portfolio__intro {
+  color: #d5d5d5;
+  padding: 0 20px 20px;
+  line-height: 1.4;
 }
 
 .portfolio__col {
@@ -430,10 +321,12 @@
   text-decoration: none;
 }
 
-.modal_portfolio {
-  width: 1080px;
+.portfolio_navbar {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.modal_portfolio.fancybox-content {
-  padding: 0;
+.price {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
