--- a/public/css/service.css
+++ b/public/css/service.css
@@ -117,9 +117,9 @@
 
 .item_price__content {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 calc(100% - 350px);
-  flex: 0 0 calc(100% - 350px);
-  max-width: calc(100% - 350px);
+  -ms-flex: 0 0 calc(100% - 300px);
+  flex: 0 0 calc(100% - 300px);
+  max-width: calc(100% - 300px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,9 +134,9 @@
 
 .item_price__info {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 250px;
-  flex: 0 0 250px;
-  max-width: 250px;
+  -ms-flex: 0 0 200px;
+  flex: 0 0 200px;
+  max-width: 200px;
 }
 
 .item_price__title {
@@ -163,6 +163,8 @@
 
 .item_price__add-intro {
   font-size: 13px;
+  line-height: 18px;
+  margin-top: 4px;
   opacity: .5;
 }
 
@@ -239,11 +241,6 @@
   }
 }
 
-.item_info {
-  padding: 30px;
-  background-color: #1a1a1a;
-}
-
 .content-main {
   position: relative;
   padding: 40px;
@@ -264,6 +261,7 @@
   position: absolute;
   top: 40px;
   left: 40px;
+  font-size: 12px;
   text-align: right;
   padding: 4px 6px;
   border: 4px solid #c1ea1d;
@@ -335,8 +333,10 @@
 
 .content-compare__image {
   width: 100%;
-  height: 560px;
+  height: 514px;
   background: no-repeat top center / cover;
+  padding: 10px;
+  border: 1px solid #3e3e3e;
 }
 
 @media all and (max-width: 1360px) {
@@ -408,18 +408,19 @@
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.portfolio__subtitle {
-  color: #d5d5d5;
-  text-decoration: none;
-  font-size: 12px;
-  padding: 10px 20px;
+.portfolio__title {
+  padding: 10px 20px 0;
   margin: 0;
 }
 
-.portfolio__title {
-  font-weight: 800;
-  padding: 10px 20px 20px;
-  margin: 0;
+.portfolio__title:last-child {
+  padding-bottom: 20px;
+}
+
+.portfolio__intro {
+  color: #d5d5d5;
+  padding: 0 20px 20px;
+  line-height: 1.4;
 }
 
 .portfolio__col {
@@ -428,6 +429,10 @@
 
 .portfolio__col:hover, .portfolio__col:focus {
   text-decoration: none;
+}
+
+.portfolio_navbar {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .modal_portfolio {
