--- a/src/component/_variable.scss
+++ b/src/component/_variable.scss
@@ -40,8 +40,9 @@ $font-size-base       : 1rem;
 $font-weight-base     : 400;
 $line-height-base     : 1.4;
 
-$font-family-heading  : "Open Sans", sans-serif;
+$font-family-heading  : "Open Sans", "Helvetica Neue", Arial,  sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-base     : "Open Sans", "Helvetica Neue", Arial,  sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-serif    : "Playfair Display",   "Times New Roman",  serif !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,   "Liberation Mono",   "Courier New",    monospace !default;
 
 $font-size: (
