--- a/src/component/btn/_btn_action.scss
+++ b/src/component/btn/_btn_action.scss
@@ -1,12 +1,10 @@
 .btn_action{
-    font-weight: $font-weight-bold;
-    background: $green;
-    color: $black;
+    border: 4px solid $green;
+    color: $green;
     text-align: center;
-    padding: 14px 24px;
 
     &:hover, &:focus{
-        background: darken($color: $green, $amount: 10);
-        color: $black;
+        background-color: darken($color: $black, $amount: 4);
+        color: $green;
     }
 }
