--- a/src/component/content/_content-compare.scss
+++ b/src/component/content/_content-compare.scss
@@ -3,10 +3,12 @@
 
     &__image{
         width: 100%;
-        height: 560px;
+        height: 514px;
         // max-height: 100vh;
 
         background: no-repeat top center / cover;
+        padding: $spacer/4;
+        border: 1px solid $border-color;
     }
 }
 
