--- a/src/component/framework/_framework.scss
+++ b/src/component/framework/_framework.scss
@@ -21,6 +21,10 @@ h1, h2, h3, h4, h5, h6,
     font-weight: $font-weight-heading;
     line-height: $line-height-heading;
     margin-bottom: map-get($spacers, 2);
+
+    &:last-child{
+        margin-bottom: 0;
+    }
 }
 * + h1, * + h2, * + h3, * + h4, * + h5, * + h6,
 * + .h1, * + .h2, * + .h3, * + .h4, * + .h5, * + .h6{
