--- a/src/component/header/header.pug
+++ b/src/component/header/header.pug
@@ -6,33 +6,53 @@ header.header
                     path.header__logo-path(d="M373.438,20.246 C367.838,20.246 363.438,15.846 363.438,10.247 C363.438,4.647 367.838,0.247 373.438,0.247 C379.038,0.247 383.438,4.647 383.438,10.247 C383.438,15.846 379.038,20.246 373.438,20.246 ZM381.438,94.245 L365.438,94.245 L365.438,26.246 L357.438,26.246 L357.438,24.246 L381.438,24.246 L381.438,94.245 ZM339.041,94.245 C328.041,94.245 337.374,94.245 323.041,94.245 L323.041,26.246 L313.041,26.246 L313.041,24.246 L323.041,24.246 L323.041,10.846 L339.041,0.247 L339.041,24.246 L351.040,24.246 L351.040,26.246 L339.041,26.246 L339.041,94.245 ZM297.643,94.245 C287.643,94.245 293.644,94.245 281.644,94.245 L281.644,26.246 L271.644,26.246 L271.644,24.246 L281.644,24.246 L281.644,10.846 L297.643,0.247 L297.643,24.246 L309.643,24.246 L309.643,26.246 L297.643,26.246 L297.643,94.245 ZM220.846,76.445 L242.446,61.846 L242.446,42.246 C242.446,30.446 239.046,25.246 232.446,25.246 C227.446,25.246 221.646,27.246 218.646,31.246 C224.446,31.246 228.446,35.246 228.446,40.246 C228.446,45.246 224.446,49.246 219.446,49.246 C214.446,49.246 210.446,45.246 210.446,40.246 C210.446,30.846 220.446,23.246 232.446,23.246 C245.646,23.246 258.446,30.846 258.446,50.246 L258.446,94.704 L206.881,95.007 C209.285,85.314 220.846,76.445 220.846,76.445 ZM242.446,94.704 L242.446,64.646 L228.046,74.645 C224.233,77.187 222.728,83.860 222.483,94.909 L242.446,94.704 ZM193.444,33.846 L180.000,94.000 L162.000,94.000 L145.645,26.246 L137.645,26.246 L137.645,24.246 L169.644,24.246 L169.644,26.246 L161.444,26.246 L177.644,93.845 L193.044,26.246 L185.244,26.246 L185.244,24.246 L204.644,24.246 L204.644,26.246 C198.244,26.246 194.644,28.646 193.444,33.846 ZM115.644,50.246 C115.644,32.446 112.244,25.246 105.644,25.246 C99.044,25.246 95.644,32.446 95.644,50.246 L95.644,94.245 L79.644,94.245 L79.644,50.246 C79.644,31.246 92.444,23.246 105.644,23.246 C118.844,23.246 131.644,31.246 131.644,50.246 L131.644,94.245 L115.644,94.245 L115.644,50.246 ZM44.644,35.246 C44.644,30.046 42.644,26.446 38.644,26.446 C33.044,26.446 24.644,33.846 24.644,40.846 L24.644,94.245 L8.644,94.245 L8.644,26.246 L0.645,26.246 L0.645,24.246 L24.644,24.246 L24.644,33.646 C27.244,29.246 34.444,23.246 42.644,23.246 C55.444,23.246 60.644,30.646 60.644,44.246 L60.644,94.245 L44.644,94.245 L44.644,35.246 Z")
             .header__group-link
                 a.header__email(href="mailto:work@novatti.ru") work@novatti.ru
-                a.header__link(href="portfolio.html") Портфолио студии
-            svg.header__nav#open-nav(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMinYMin meet" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve")
+                a.header__link(href="portfolio.html") Портфолио агентства
+            svg.header__nav#open-nav(width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 385 385" xml:space="preserve")
                 g
-                    path.header__nav__path(d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z")
-                    path.header__nav__path(d="M6.979,161.787c30.287,25.98,64.615,55.426,131.017,55.426c66.403,0,100.733-29.446,131.022-55.426C297.662,137.219,322.399,116,373.998,116c51.597,0,76.335,21.218,104.98,45.787c8.385,7.193,21.01,6.224,28.201-2.161c7.192-8.384,6.223-21.012-2.161-28.202C474.729,105.444,440.399,76,373.998,76c-66.403,0-100.733,29.446-131.022,55.426c-28.644,24.568-53.382,45.787-104.98,45.787c-51.596,0-76.332-21.218-104.974-45.787c-8.384-7.192-21.011-6.226-28.202,2.159C-2.372,141.969-1.405,154.596,6.979,161.787z")
-                    path.header__nav__path(d="M505.02,350.213c-30.289-25.979-64.619-55.426-131.022-55.426s-100.733,29.446-131.022,55.426C214.332,374.781,189.594,396,137.996,396c-51.594,0-76.331-21.218-104.973-45.785l-0.002-0.002c-8.384-7.189-21.009-6.223-28.201,2.16c-7.191,8.384-6.224,21.011,2.16,28.202C37.268,406.555,71.597,436,137.996,436c66.403,0,100.733-29.446,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159C514.371,370.03,513.405,357.404,505.02,350.213z")
+                    path.header__nav-path(d="M12.03,120.303h360.909c6.641,0,12.03-5.39,12.03-12.03c0-6.641-5.39-12.03-12.03-12.03H12.03    c-6.641,0-12.03,5.39-12.03,12.03C0,114.913,5.39,120.303,12.03,120.303z")
+                    path.header__nav-path(d="M372.939,180.455H12.03c-6.641,0-12.03,5.39-12.03,12.03s5.39,12.03,12.03,12.03h360.909c6.641,0,12.03-5.39,12.03-12.03    S379.58,180.455,372.939,180.455z")
+                    path.header__nav-path(d="M372.939,264.667H132.333c-6.641,0-12.03,5.39-12.03,12.03c0,6.641,5.39,12.03,12.03,12.03h240.606    c6.641,0,12.03-5.39,12.03-12.03C384.97,270.056,379.58,264.667,372.939,264.667z")
 nav.navbar.navbar_header
     .navbar_header__close#close-nav
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6Z" fill="currentColor"></path></svg>
-    .navbar__title Основные услуги
-    a.navbar__item(href="") Сайт на Тильда
-    a.navbar__item(href="") Сайт под ключ
-    a.navbar__item(href="") Разработка логотипа
-    a.navbar__item(href="") Создание фирменного стиля
-    a.navbar__item(href="") Презентации
-    a.navbar__item(href="") Рассылки: дизайн и верстка
-    a.navbar__item(href="") Полиграфия
-    a.navbar__item(href="") Реклама в Яндекс и Гугл
-    a.navbar__item(href="") Таргетированная реклама
-    a.navbar__item(href="") Упаковка продукта
-    a.navbar__item(href="") Контент
-    a.navbar__item(href="") SEO
-    a.navbar__item(href="") Тех.поддержка сайта
-    a.navbar__item(href="") Анализ сайта
-    a.navbar__item(href="") Управление репутацией
-    
-    a.navbar__title.navbar__title_link(href="") Портфолио
-    a.navbar__item(href="") Сайт для «ДИФ Строй-Инжиниринг»
-    a.navbar__item(href="") Вывод сайта в ТОП-10 по высокочастотным запросам
-    a.navbar__item(href="") Сайт для TopStone
+    .row
+        .col-8.mb-md-3
+            .navbar__title Основные услуги
+            .navbar__grid.mb-3
+                a.navbar__item.navbar__service(href="") Сайт на Тильда
+                a.navbar__item.navbar__service(href="") Сайт под ключ
+                a.navbar__item.navbar__service(href="") Разработка логотипа
+                a.navbar__item.navbar__service(href="") Фирменный стиль
+                a.navbar__item.navbar__service(href="") Презентации
+                a.navbar__item.navbar__service(href="") E-mail рассылки
+                a.navbar__item.navbar__service(href="") Полиграфия
+                a.navbar__item.navbar__service(href="") Реклама в Яндекс и Гугл
+                a.navbar__item.navbar__service(href="") Таргетированная реклама
+                a.navbar__item.navbar__service(href="") Упаковка продукта
+                a.navbar__item.navbar__service(href="") Контент
+                a.navbar__item.navbar__service(href="") SEO
+                a.navbar__item.navbar__service(href="") Тех.поддержка сайта
+                a.navbar__item.navbar__service(href="") Анализ сайта
+                a.navbar__item.navbar__service(href="") Управление репутацией
+        .col-4
+            .navbar__title Дополнительно
+            a.navbar__item.mb-1(href="") Реализованные проекты
+            a.navbar__item(href="") Контакты
+            p.h4
+                span.text-green Pro
+                | консультируем бесплатно. 
+                span.d-block И честно
+                    span.text-green .
+            form.form
+                input.input.input--has-validation.input--full.phone(type="tel" placeholder="Телефон *")
+                .mt-1.mb-3.form__agree.checkbox
+                    input.checkbox__input#agreeInline(type="checkbox" name="agreeInline" checked="checked" required="required")
+                    label.checkbox__label(for="agreeInline") согласен с обработкой 
+                        a.form__link-inverse(href="/policy.pdf" target="_blank") персональных данных
+                button.btn.btn_action.btn--full(type="submit") Обсудить проект
+    .portfolio.portfolio_navbar.mt-2
+        +portfolio-link("text.html", "", "/demo/demo-preview.jpg", "EuroComm", "Сайт-визитка на MODx Revo")
+        +portfolio-link("text.html", "", "/demo/demo-preview.jpg", "KAM fish", "Логотип и иконки для&nbsp;хайлайтс")
+        +portfolio-link("text.html", "", "/demo/demo-preview.jpg", "Pelibox", "Открытки для доставки еды")
+        +portfolio-link("text.html", "", "/demo/demo-preview.jpg", "Magenta", "SEO-продвижение школы")
+        +portfolio-link("text.html", "", "/demo/demo-preview.jpg", "Pelibox", "Открытки для доставки еды")
