--- a/src/component/navbar/_navbar.scss
+++ b/src/component/navbar/_navbar.scss
@@ -4,17 +4,30 @@
         font-weight: $font-weight-bolder;
         margin-bottom: $spacer/2;
     }
+    &__grid{
+        display: grid;
+        grid-gap: $spacer/4;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
     &__item{
+        display: block;
         color: $light-grey;
         line-height: 1.4;
-        margin-bottom: $spacer/4;
 
         &:hover, &:focus{
+            text-decoration: none;
             color: $green;
         }
 
         & + .navbar__title{
             margin-top: $spacer/2;
         }
+    }
+    &__service{
+        display: flex;
+        align-items: center;
+        border: 1px solid $border-color;
+        padding: $spacer/2;
+        background-color: $black;
     }
 }
